@@ -18,23 +18,30 @@
     <label help='1'>Note that you must save your choices, logout and log back in again before the new settings will take full effect.</label>
   </section>
 
-  <section title='XSettings'>
-    <label help='1'>These settings affect all XSettings-aware programs immediately. Older programs will not be affected.</label>
-  
-    <frame label='Display'>
-      <font name='Gtk/FontName' label='Default font'>The font used by Gtk+ applications</font>
-      <toggle label='Blinking cursor' name='Net/CursorBlink'/>
-      <slider label='Speed: (fast)' end='(slow)' name='Net/CursorBlinkTime' fixed='0' min='100' max='2000'>Speed at which the text entry cursor flashes (if flashing is enabled).</slider>
-    </frame>
-    <frame label='Mouse'>
-      <slider name='Net/DoubleClickTime' label='Double-click speed: (fast)' end='(slow)'
-	    min='100' max='2000'>Time allowed between the two clicks that make up a double click. Make this bigger if you have trouble double-clicking fast enough; set it smaller if two single-clicks sometimes get treated as a double click.</slider>
-    </frame>
-    <frame label='Keyboard'>
-      <toggle name='Gtk/CanChangeAccels'
-    	    label='Allow keybindings to be changed from menus'>When this is on, you can set up a short-cut for a menu item by holding to pointer over the menu item and pressing the key. If off, short-cuts cannot be changed.</toggle>
-    </frame>
+  <section title='Display'>
+    <label help='1'>This setting affects all Gtk+-2 applications, but many applications will ignore it.</label>
+    <font name='Gtk/FontName' label='Default Gtk font'>The font used by Gtk+ applications</font>
   </section>
+
+  <section title='Mouse'>
+    <slider name='Net/DoubleClickTime' label='Double-click speed: (fast)' end='(slow)'
+	    min='100' max='2000'>Time allowed between the two clicks that make up a double click. Make this bigger if you have trouble double-clicking fast enough; set it smaller if two single-clicks sometimes get treated as a double click.
+    </slider>
+    <spacer/>
+    <slider name='accel_threshold' label='Acceleration threshold' min='0' max='20'>Controls how fast you have to move the pointer before the acceleration (below) kicks in.</slider>
+    <slider name='accel_factor' label='Acceleration (none)' end='(10x)'
+    	    min='10' max='100'>
+      When the pointer is moved quickly more than the threshold number of pixels, its speed is multiplied by this number.
+    </slider>
+  </section>
+  
+  <section title='Keyboard'>
+    <toggle label='Blinking cursor' name='Net/CursorBlink'/>
+    <slider label='Speed: (fast)' end='(slow)' name='Net/CursorBlinkTime' fixed='0' min='100' max='2000'>Speed at which the text entry cursor flashes (if flashing is enabled).</slider>
+    <toggle name='Gtk/CanChangeAccels'
+    	    label='Allow keybindings to be changed from menus'>When this is on, you can set up a short-cut for a menu item by holding to pointer over the menu item and pressing the key. If off, short-cuts cannot be changed.</toggle>
+  </section>
+
   <section title='Messages'>
     <label help='1'>All programs have a 'standard error stream' which they can write text messages to. ROX-Session creates such a connection between itself and every program it starts. It displays all the messages it collects this way briefly on screen.</label>
     <frame label='On-screen message log'>
